Path sanitization